# wa-bridge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  api.ts  config.ts  eslint.config.ts  go.mod  go.sum  hook.ts  index.ts  main.go  package.json  server.ts  start.bat  start.sh  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-build.yml  format-check.yml  lint-check.yml  pr-comment.yml
api/: Cargo.toml  go.mod  main.go  middleware.ts  routes.ts  server.ts
api/go/: main.go
astro-web-runtime/: astro.config.mjs  package.json  tailwind.config.mjs
core/: .gitignore  auth.ts  config.ts  index.ts  seralize.ts  util.ts
hooks/: index.ts
interface/: index.html
lib/: index.ts
middleware/: README.md  api.ts  errors.ts  index.ts  types.ts
public/: about.html  dashboard.html  docs.html  index.html  pairing.html  styles.css
scripts/: README.md
service/: Cargo.toml  README.md  api.ts  astro.config.mjs  errors.ts  handler.ts  index.ts  lib.ts  middleware.ts  pairing.html  predicates.ts  sql.ts  types.ts  worker.ts
service/src/: main.rs
service/src/layouts/: Layout.astro
service/src/lib/: api.ts
service/src/manager/: events.rs  mod.rs  supervisor.rs
service/src/pages/: index.astro
service/src/pages/dashboard/: [id].astro
service/src/routes/: instance.rs  mod.rs  pair.rs  settings.rs  system.rs  util.rs
service/src/sql/: mod.rs
service/util/: main.ts
src/: client.go
store/: main.sql
ui/: dashboard.html  index.html  pairing.html
(+106 files in other folders)
