[package]
name = "whatsaly-api"
version = "0.1.0"
description = "API Service Client"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "net"] }
tokio-stream = { version = "0.1", features = ["time"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
sysinfo = "0.32"
prost-types = "0.13"
anyhow = "1.0.100"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
